# powerline-defect-detection

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_project.py  start.sh
deploy/: Dockerfile  Dockerfile.api  Dockerfile.ui  README.md
deploy/src/: config.py
deploy/src/api/: schemas.py
deploy/src/ml/: trainer.py
deploy/src/ui/: app.py
notebooks/: check_data.py  convert_to_yolo.py  inspect_annotation_structure.py  powerline-defect-detection.ipynb  tree.txt  visualize_obb_result.py  visualize_rotation_test.py  visualize_yolo.py
src/api/: main.py
src/ml/: predictor.py
src/ui/: app.py
src/worker/: celery_app.py  tasks.py
weights/: yolo26l_obb_best.pt  yolo26s_obb_best.pt
